<resources>
    <string name="app_name">BarMaTic</string>

    <string name="descripción_razonamiento">Es un proceso mental que implica la aplicación de la lógica.
        Mediante esta clase de razonamiento, se puede partir de una o de varias premisas para arribar
        a una conclusión que puede determinarse como verdadera, falsa o posible.
    </string>

    <string name="descripción_PensNumyVar">El pensamiento numérico-variacional apunta hacia el desarrollo
        de competencias relacionadas con la comprensión del número y su significado; las operaciones,
        sus propiedades, su efecto y las relaciones entre ellas; el reconocimiento de regularidades y
        patrones y la identificación de variables.
    </string>

    <string name="descripción_PensMetricoyGeome">El pensamiento métrico y geométrico hace referencia a la comprensión
        general que se tiene sobre las magnitudes y las cantidades, su medición y el uso flexible
        de los sistemas métricos o de medidas en diferentes situaciones.
    </string>

    <string name="descripción_PensAleatorio">El pensamiento aleatorio se apoya directamente en
        conceptos y procedimientos de la teoría de probabilidades y de la estadística
        inferencial e indirectamente en la estadística descriptiva y en la combinatoria.
        Ayuda a buscar soluciones razonables a problemas en los que no hay una solución clara y segura.
    </string>

    <string name="descripción_PensAnalisisdeProcesos">El análisis de procesos consiste en llevar a
        cabo una revisión exhaustiva y llegar a una comprensión completa de un proceso con el
        objetivo de entenderlo y encontrar soluciones.
    </string>

    <string name="descripción_PensEduFinanciera">La importancia de la  educación financiera radica en el
        desarrollo de la capacidad para administrar el dinero, dar seguimiento a tus finanzas, planear
        para el futuro y elegir de la mejor manera los productos financieros.
    </string>

    <!--acerca de -->

    <string name="acercade">BarMatic es una aplicación creada para la Institución Educativa Rural Barranquillita
        cuyo objetivo es fortalecer el pensamiento lógico de los estudiantes, esto a partir de una serie de
        preguntas y respuestas que están basadas en una serie de metodologías (categorías) que ayudan a
        identificar las falencias que tenemos con relación al pensamiento lógico y poder tener la oportunidad de mejorar.

    </string>

    <string name="categorias">Categorías:\nEn las categorías disponibles se pueden encontrar 1 o 2
        niveles los cuales cada uno contiene 10 preguntas.\n\n

        Los módulos o categorías son los siguientes:\n\n

        •Razonamiento lógico. \n
        •Pensamiento numérico y variacional. \n
        •Pensamiento métrico y geométrico. \n
        •Pensamiento aleatorio. \n
        •Educación financiera.

    </string>

    <string name="preguntas">Preguntas y respuestas:\nCuando se inicia el Quiz de alguna categoría, a partir de
        ese momento cuenta con "10 minutos" para resolver cada pregunta y una vez finalizado este
        tiempo la App le mostrara un mensaje de “intentar de nuevo”, una vez presionado en este botón
        se reiniciará el Quiz y también el progreso que se tenía anteriormente.

    </string>

    <string name="compartir">Compartir resultado:\nBarMatic le permitirá compartir el resultado obtenido al finalizar
        el Quiz en las diferentes opciones disponibles por el dispositivo móvil
        (WhatsApp, Facebook, E-mail, Mensaje de texto, entro otros).

    </string>

    <string name="soporte">Soporte:\nSi presenta algún error o requiere algún tipo de soporte puede
        informar a los siguientes correos “juan.valenciaor@amigo.edu.co / suyis.lozanoga@amigo.edu.co”
        o vía grupo BarMatic en WhatsApp y si le es posible anexar la siguiente información:\n\n
        •¿En cuál visual le presento error?\n
        •¿Cuántas veces se le presento el error?\n
        •Una o más capturas de pantalla.\n

    </string>

    <string name="mensaje">Diviertete y Aprende con BarMaTic</string>

    <string name="mensaje_OFF_ON">Elige la opción en la que deseas jugar.</string>

</resources>
