<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/blue"
tools:context=".SubmenuAcercaDe">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_105sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp" />


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="240dp"
            android:src="@drawable/logocolegio" />

    </RelativeLayout>



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/autour_one"
        android:text="Acerca de " />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/_12sdp"
                android:fontFamily="@font/autour_one"
                android:text="@string/acercade"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/_12sdp"
                android:fontFamily="@font/autour_one"
                android:text="@string/categorias"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/_12sdp"
                android:fontFamily="@font/autour_one"
                android:text="@string/preguntas"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/_12sdp"
                android:fontFamily="@font/autour_one"
                android:text="@string/compartir"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/_12sdp"
                android:fontFamily="@font/autour_one"
                android:text="@string/soporte"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />


        </GridLayout>

    </ScrollView>

<!--    <Button-->
<!--        android:onClick="irinicio"-->
<!--        android:id="@+id/inicio"-->
<!--        android:layout_marginTop="@dimen/_10sdp"-->
<!--        android:layout_marginStart="@dimen/_40sdp"-->
<!--        android:layout_marginEnd="@dimen/_40sdp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/bordes_redondos_green"-->
<!--        android:textColor="@color/white"-->
<!--        android:fontFamily="@font/autour_one"-->
<!--        android:text="Regresar" />-->

</LinearLayout>

</LinearLayout>