<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/blue"
tools:context=".OptionOnlineOffline">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_105sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/white"
            android:textSize="@dimen/_35sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitulo"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center"
            android:text="Institución Educativa Rural Barranquillita"
            android:fontFamily="@font/autour_one"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
        <!--            pendiente poner imagen mas grande-->

        <ImageView
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="240dp"
            android:src="@drawable/logocolegio" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/autour_one"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="center"
        android:text="@string/mensaje" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/autour_one"
        android:textSize="@dimen/_10sdp"
        android:textAlignment="center"
        android:text="@string/mensaje_OFF_ON" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_margin="@dimen/_12sdp">

                <LinearLayout
                    android:onClick="irMenuOffline"
                    android:gravity="center"
                    android:padding="@dimen/_16sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/_98sdp"
                        android:layout_height="@dimen/_98sdp"
                        android:src="@drawable/sinconexion1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="Jugar Offline"
                        android:fontFamily="@font/autour_one"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_margin="@dimen/_12sdp">

                <LinearLayout
                    android:onClick="irMenuOnline"
                    android:gravity="center"
                    android:padding="@dimen/_16sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/internet"/>

                    <TextView
                        android:layout_marginTop="@dimen/_2sdp"
                        android:textSize="@dimen/_11sdp"
                        android:textAlignment="center"
                        android:text="Jugar Online"
                        android:fontFamily="@font/autour_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="irSubmenuAcercaDe"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/acercade" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/autour_one"
                        android:text="Acerca de"
                        android:textAlignment="center"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

    </ScrollView>

</LinearLayout>

</LinearLayout>